--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "gym-app",
   "main": "server.js",
-  "homepage": "https://gym-platform.onrender.com",
+  "homepage": "",
   "scripts": {
     "server": "nodemon backend/server.js",
     "start": "node backend/server.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+    "build": "npm install && npm install --prefix client && npm run build --prefix client",
+    "postinstall": "client/npm run build" 
   },
   "author": "",
   "license": "ISC",
