--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon backend/server.js",
     "start": "node backend/server.js",
     "build": "npm install && npm install --prefix client && npm run build --prefix client",
-    "postinstall": "client/npm run build" 
+    "postinstall": "npm install --prefix client && npm run build --prefix client"
+
   },
   "author": "",
   "license": "ISC",
