--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "server": "nodemon backend/server.js",
     "start": "node backend/server.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client",
-    "postinstall": "npm install --prefix client && npm run build --prefix client"
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
  },
   "author": "",
   "license": "ISC",
