--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "server.js",
   "homepage": "",
   "scripts": {
+    "dev": "concurrently \"cd client && npm start\" \"npm start\"",
     "server": "nodemon backend/server.js",
     "start": "node backend/server.js",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
- },
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cloudinary": "^2.4.0",
+    "concurrently": "^9.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
